General cleanup for java 21.